--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- link box icon -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <!-- link css -->
     <link rel="stylesheet" href="css/style.css" />
     <title>portofolio aji</title>
   </head>
@@ -10,11 +16,18 @@
     <!-- navbar start -->
     <header class="header">
       <div class="logo"></div>
-      <nav class="nav-bar">
-        <a href="#home">Home</a>
-        <a href="#profile">Our Profile</a>
-        <a href="">Portofolio</a>
-        <a href="#message">Message Us</a>
+      <nav class="navbar">
+        <section class="text-nav">
+          <a href="#home">Home</a>
+          <a href="#profile">Our Profile</a>
+          <a href="">Portofolio</a>
+          <a href="#message">Message Us</a>
+        </section>
+        <section class="icon-nav">
+          <button type="button" href="" id="hamburger-menu">
+            <i class="bx bx-menu"></i>
+          </button>
+        </section>
       </nav>
     </header>
     <!-- navbar start -->
