footer dan info

--- a/index.html
+++ b/index.html
@@ -115,12 +115,25 @@
             </div>
           </form>
           <section class="info">
-            <p>pokoknya kata kata</p>
+            <main class="info-content">
+              <p><span>Current time</span> : Fri Jun 2022 11:27:28 GMT+0100</p>
+              <br />
+              <p><span>Nama</span> : Aji Banyu Rizqi</p>
+              <p><span>Tanggal Lahir</span> : 06/06/05</p>
+              <p><span>Jenis Kelamin</span> : Laki-Laki</p>
+              <p><span>Pesan</span> : Lagi Belajar Buat Website</p>
+            </main>
           </section>
         </section>
       </section>
     </section>
     <!-- message content end -->
+
+    <!-- footer start -->
+    <footer>
+      <p>Created By BanyuRizqi</p>
+    </footer>
+    <!-- footer end -->
 
     <script src="js/app.js"></script>
   </body>
