fungsi submit form

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
       </nav>
     </header>
-    <!-- navbar start -->
+    <!-- navbar end -->
 
     <!-- home content start -->
     <section class="home" id="home">
@@ -39,6 +39,7 @@
           <h1>Hi Monyet, Welcome to Website</h1>
           <p>ini adalah website latihan pertama</p>
         </div>
+        <div class="hero-image"></div>
       </main>
     </section>
     <!-- home content start -->
@@ -78,7 +79,7 @@
                 <span>:</span>
               </div>
               <div class="input-wrapper form-item">
-                <input type="text" placeholder="Nama" />
+                <input type="text" placeholder="Nama" id="nama" />
               </div>
             </div>
             <div class="form tgl-lahir">
@@ -87,17 +88,30 @@
                 <p>Tangal Lahir</p>
                 <span>:</span>
               </div>
-              <div class="input-wrapper form-item"><input type="date" /></div>
+              <div class="input-wrapper form-item">
+                <input type="date" id="tgl" />
+              </div>
             </div>
             <div class="form jenis-kelamin">
-              <!--  -->
               <div class="input-judul form-item">
                 <p>Jenis Kelamin</p>
                 <span>:</span>
               </div>
               <div class="input-wrapper form-item radio">
-                <input type="radio" /> Laki-Laki
-                <input type="radio" /> Perempuan
+                <input
+                  type="radio"
+                  value="Laki-Laki"
+                  class="kelamin"
+                  name="kelamin"
+                />
+                Laki-Laki
+                <input
+                  type="radio"
+                  value="Perempuan"
+                  class="kelamin"
+                  name="kelamin"
+                />
+                Perempuan
               </div>
             </div>
             <div class="form pesan">
@@ -107,21 +121,34 @@
                 <span>:</span>
               </div>
               <div class="input-wrapper form-item">
-                <textarea name="" id="" placeholder="Pesan"></textarea>
+                <textarea name="" id="pesan" placeholder="Pesan"></textarea>
               </div>
             </div>
             <div class="btn">
-              <button type="button">Kirim Pesan</button>
+              <button type="button" id="kirim" onclick="formValue()">
+                Kirim Pesan
+              </button>
             </div>
           </form>
           <section class="info">
             <main class="info-content">
               <p><span>Current time</span> : Fri Jun 2022 11:27:28 GMT+0100</p>
               <br />
-              <p><span>Nama</span> : Aji Banyu Rizqi</p>
-              <p><span>Tanggal Lahir</span> : 06/06/05</p>
-              <p><span>Jenis Kelamin</span> : Laki-Laki</p>
-              <p><span>Pesan</span> : Lagi Belajar Buat Website</p>
+              <p>
+                <span class="span">Nama</span> : <span id="sender-nama"></span>
+              </p>
+              <p>
+                <span class="span">Tanggal Lahir</span> :
+                <span id="sender-tglLahir"></span>
+              </p>
+              <p>
+                <span class="span">Jenis Kelamin</span> :
+                <span id="sender-gender"></span>
+              </p>
+              <p>
+                <span class="span">Pesan</span> :
+                <span id="sender-pesan"></span>
+              </p>
             </main>
           </section>
         </section>
