--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <p>ini adalah website latihan pertama</p>
         </div>
         <div class="hero-image-wrapper">
-          <div class="left-btn">
+          <div class="btn-bg">
             <button onclick="plusDivs(-1)">
               <i class="bx bxs-chevron-left"></i>
             </button>
@@ -64,7 +64,7 @@
             <!-- <button onclick="plusDivs(-1)">Previous</button>
             <button onclick="plusDivs(1)">Next</button> -->
           </div>
-          <div class="right-btn">
+          <div class="btn-bg">
             <button onclick="plusDivs(1)">
               <i class="bx bxs-chevron-right"></i>
             </button>
@@ -132,6 +132,7 @@
                   id="Laki-Laki"
                   name="kelamin"
                   value="Laki-Laki"
+                  class="kelamin"
                 />
                 <label for="Laki-Laki">Laki-Laki</label>
                 <input
@@ -139,6 +140,7 @@
                   id="Perempuan"
                   name="kelamin"
                   value="Perempuan"
+                  class="kelamin"
                 />
                 <label for="Perempuan">Perempuan</label>
               </div>
