--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   <body>
     <!-- navbar start -->
     <header class="header">
-      <div class="logo"></div>
+      <div class="logo-wrapper">
+        <div class="logo"></div>
+        <h1>Banyu<span>Aji.</span></h1>
+      </div>
       <nav class="navbar">
         <section class="text-nav">
           <a href="#home">Home</a>
@@ -48,17 +51,17 @@
           <div class="slider">
             <img
               class="img-slideshow"
-              src="assets/VideoCapture_20240410-183512.jpg"
+              src="assets/VideoCapture_20240410-183512.jp"
               style="display: block"
             />
             <img
               class="img-slideshow"
-              src="assets/2024-07-01 23 38 04.png"
+              src="assets/2024-07-01 23 38 04.pn"
               style="display: none"
             />
             <img
               class="img-slideshow"
-              src="assets/2.jpg"
+              src="assets/2.jp"
               style="display: none"
             />
             <!-- <button onclick="plusDivs(-1)">Previous</button>
@@ -81,15 +84,15 @@
         <article class="profile-items-wrapper">
           <div class="profile-item">
             <div class="profile-logo"></div>
-            <p>contoh</p>
+            <p>Profile 1</p>
           </div>
           <div class="profile-item">
             <div class="profile-logo"></div>
-            <p>contoh</p>
+            <p>Profile 2</p>
           </div>
           <div class="profile-item">
             <div class="profile-logo"></div>
-            <p>contoh</p>
+            <p>Profile 3</p>
           </div>
         </article>
       </main>
@@ -189,6 +192,11 @@
     <!-- footer start -->
     <footer>
       <p>Created By BanyuRizqi</p>
+      <div class="social">
+        <a href=""><i class="bx bxl-github"></i></a>
+        <a href=""><i class="bx bxl-instagram-alt"></i></a>
+        <a href=""><i class="bx bxl-whatsapp"></i></a>
+      </div>
     </footer>
     <!-- footer end -->
 
