--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
           <div class="slider">
             <img
               class="img-slideshow"
-              src="assets/VideoCapture_20240410-183512.jp"
+              src="assets/bg1.jpg"
               style="display: block"
             />
             <img
               class="img-slideshow"
-              src="assets/2024-07-01 23 38 04.pn"
+              src="assets/bg2.jpg"
               style="display: none"
             />
             <img
               class="img-slideshow"
-              src="assets/2.jp"
+              src="assets/bg3.png"
               style="display: none"
             />
             <!-- <button onclick="plusDivs(-1)">Previous</button>
@@ -158,7 +158,7 @@
               </div>
             </div>
             <div class="btn">
-              <button type="button" id="kirim" onclick="formValue()">
+              <button type="button" id="kirim" onclick="formValue();">
                 Kirim Pesan
               </button>
             </div>
@@ -193,9 +193,15 @@
     <footer>
       <p>Created By BanyuRizqi</p>
       <div class="social">
-        <a href=""><i class="bx bxl-github"></i></a>
-        <a href=""><i class="bx bxl-instagram-alt"></i></a>
-        <a href=""><i class="bx bxl-whatsapp"></i></a>
+        <a href="https://github.com/aji-banyu" target="_blank"
+          ><i class="bx bxl-github"></i
+        ></a>
+        <a href="https://www.instagram.com/_banyurizqi/" target="_blank"
+          ><i class="bx bxl-instagram-alt"></i
+        ></a>
+        <a href="https://wa.me/6287819844990?tekt=manutan" target="_blank"
+          ><i class="bx bxl-whatsapp"></i
+        ></a>
       </div>
     </footer>
     <!-- footer end -->
