--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <section class="text-nav">
           <a href="#home">Home</a>
           <a href="#profile">Our Profile</a>
-          <a href="">Portofolio</a>
           <a href="#message">Message Us</a>
         </section>
         <section class="icon-nav">
@@ -112,7 +111,7 @@
                 <span>:</span>
               </div>
               <div class="input-wrapper form-item">
-                <input type="text" placeholder="Nama" id="nama" />
+                <input type="text" placeholder="Nama" id="nama" required />
               </div>
             </div>
             <div class="form tgl-lahir">
@@ -191,7 +190,7 @@
 
     <!-- footer start -->
     <footer>
-      <p>Created By BanyuRizqi</p>
+      <p>&#169;Created By BanyuRizqi</p>
       <div class="social">
         <a href="https://github.com/aji-banyu" target="_blank"
           ><i class="bx bxl-github"></i
