--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </form>
           <section class="info">
             <main class="info-content">
-              <p><span>Current time</span> : Fri Jun 2022 11:27:28 GMT+0100</p>
+              <p><span>Current time</span> : <span id="sender-time"></span></p>
               <br />
               <p>
                 <span class="span">Nama</span> : <span id="sender-nama"></span>
